--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -165,7 +165,7 @@ stages:
               deploymentMethod: 'auto'
           - script: |
               echo "Verificando estado del servidor QA..."
-              curl -f changapp-plan-canadacentral-qa-e6b8d0e8c9egfgct.canadacentral-01.azurewebsites.net/health
+              curl -f https://changecgr-plan-caracterizacion-prod.azurewebsites.net/health
             displayName: 'Health check QA'
 
 
