--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -1,10 +1,10 @@
-# Imagen súper liviana de NGINX
+# Imagen super liviana de NGINX
 FROM nginx:alpine
 
-# Copiar todos los archivos HTML, CSS, JS al servidor web
+# Copia todos los archivos HTML, CSS, JS al servidor web
 COPY . /usr/share/nginx/html
 
-# Exponer el puerto 80 (Render usa este puerto)
+# Expone el puerto 80 (Render usa este puerto)
 EXPOSE 80
 
 # Iniciar NGINX
