--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@supabase/supabase-js": "^2.45.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "open": "^10.2.0"
+    "open": "^10.2.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
     "supertest": "^7.1.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFiles": [
+      "./jest.setup.js"
+  ]
   }
 }
