--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "open": "^10.2.0",
     "pg": "^8.16.3"
@@ -27,6 +28,6 @@
     "testEnvironment": "node",
     "setupFiles": [
       "./jest.setup.js"
-  ]
+    ]
   }
 }
