--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minichangapp-backend",
   "version": "1.0.0",
   "description": "Backend de MiniChangApp con Express y Supabase",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
