--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,7 @@ stages:
 
     - script: |
         echo "Ejecutando tests ..."
+        export NODE_ENV=test
         npm ci
         npm test -- --coverage --runInBand
       displayName: "Run tests"
