--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,8 @@ variables:
   azureSubscription: 'azure-for-students'
 
   # WebApps correctas
-  webAppQA: 'changapp-qa-f2dkejh0dxeshbh4'
-  webAppPROD: 'changapp-prod-atcjfjgnbkhde0g2'
+  webAppQA: 'changapp-qa'
+  webAppPROD: 'changapp-prod'
 
 stages:
 
