--- a/package.json
+++ b/package.json
@@ -1,33 +1,40 @@
 {
   "name": "minichangapp-backend",
   "version": "1.0.0",
-  "description": "Backend de MiniChangApp con Express y Supabase",
-  "main": "app.js",
+  "description": "Backend para MiniChangApp con Express y Supabase",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "jest --detectOpenHandles --forceExit",
-    "test:coverage": "jest --coverage --detectOpenHandles --forceExit",
-    "test:integration": "jest --runTestsByPath __tests__/integracion.usuarios.test.js"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --detectOpenHandles --forceExit"
   },
+  "keywords": [
+    "express",
+    "supabase",
+    "backend",
+    "api"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
+    "@supabase/supabase-js": "^2.39.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.21.2",
-    "open": "^10.2.0",
-    "pg": "^8.16.3"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.28.5",
-    "babel-jest": "^30.2.0",
-    "jest": "^30.2.0",
-    "supertest": "^7.1.4"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "setupFiles": [
-      "./jest.setup.js"
-    ]
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@jest/environment-jsdom-abstract": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "open": "^10.0.3",
+    "supertest": "^6.3.4"
   }
 }
