--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,52 @@
+# Dependencias
 node_modules/
-coverage/
+package-lock.json
+
+# Variables de entorno (¡MUY IMPORTANTE!)
 .env
-.env.*
+.env.local
+.env.development
+.env.test.local
+.env.production.local
+
+# NO ignorar archivos de ejemplo
+!.env.example
+!.env.test
+
+# Cobertura de tests
+coverage/
+*.lcov
+.nyc_output/
+
+# Logs
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Archivos del sistema operativo
 .DS_Store
 Thumbs.db
-!.env.test
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Cypress
+cypress/videos/
+cypress/screenshots/
+cypress/downloads/
+
+# Build
+dist/
+build/
+
+# Temporales
+*.tmp
+*.temp
+.cache/
