--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest --detectOpenHandles --forceExit",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --detectOpenHandles --forceExit"
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage --detectOpenHandles --forceExit",
+    "test:integration": "cross-env NODE_ENV=test jest __tests__/integracion --detectOpenHandles --forceExit",
+    "test:unit": "cross-env NODE_ENV=test jest __tests__/unit_back __tests__/unit_front --detectOpenHandles --forceExit",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test start http://localhost:3000 cypress:run",
+    "test:e2e:open": "start-server-and-test start http://localhost:3000 cypress:open",
+    "test:all": "npm test && npm run test:e2e",
+    "serve:front": "http-server front -p 5500 --silent"
   },
   "keywords": [
     "express",
     "supabase",
     "backend",
-    "api"
+    "api",
+    "rest"
   ],
   "author": "",
   "license": "ISC",
@@ -30,10 +39,14 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.0.3",
     "open": "^10.0.3",
-    "supertest": "^6.3.4"
+    "start-server-and-test": "^2.0.10",
+    "supertest": "^6.3.4",
+    "cypress": "^13.8.0",
+    "http-server": "^14.1.1"
   }
 }
